src/objects/peer__Investment_Booking__c.object
<CustomObject>
    <fields>
        <fullName>peer__Bid_Date__c</fullName>
        <label>Bid Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>peer__Booking_Order__c</fullName>
        <label>Booking Order</label>
        <referenceTo>peer__Booking_Order__c</referenceTo>
        <relationshipLabel>Investment Bookings</relationshipLabel>
        <relationshipName>Investment_Bookings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>peer__Certificate_Rate__c</fullName>
        <label>Certificate Rate</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>peer__Investment_Amount__c</fullName>
        <label>Investment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Loan_Application__c</fullName>
        <label>Loan Application</label>
        <referenceTo>peer__Loan_Application__c</referenceTo>
        <relationshipLabel>Investment Bookings</relationshipLabel>
        <relationshipName>Investment_Bookings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>peer__Purchase_Price__c</fullName>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Safe_Fund_Amount__c</fullName>
        <label>Safe Fund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Service_Rate__c</fullName>
        <label>Service Rate</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>peer__Share__c</fullName>
        <formula>IF (ISPICKVAL(peer__Loan_Application__r.peer__Stage__c, &apos;Funded&apos;),
  peer__Investment_Amount__c / peer__Loan_Application__r.peer__Amount_Funded__c,
  peer__Investment_Amount__c / peer__Loan_Application__r.peer__Requested_Loan_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>peer__Stage_Formula__c</fullName>
        <formula>TEXT(peer__Loan_Application__r.peer__Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>In Funding</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Funded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Above Threshold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready To Fund</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>peer__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Partially Winning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Losing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncommited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Investment Booking</label>
    <nameField>
        <displayFormat>IB-{00000000}</displayFormat>
        <label>Investment Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investment Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>peer__Amount_should_be_positive</fullName>
        <active>true</active>
        <errorConditionFormula>peer__Investment_Amount__c &lt;= 0</errorConditionFormula>
        <errorMessage>Please enter a positive investment amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>peer__Certificate_Rate_Check</fullName>
        <active>false</active>
        <errorConditionFormula>peer__Certificate_Rate__c &gt;  peer__Loan_Application__r.peer__Interest_Rate__c</errorConditionFormula>
        <errorMessage>The certificate rate cannot be greater than the loan application&apos;s interest rate.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>peer__Check_Available_Funds</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp; (  peer__Booking_Order__r.peer__Investor__r.peer__Funds_Available_For_Investment__c  &lt;  peer__Investment_Amount__c )</errorConditionFormula>
        <errorMessage>You don&apos;t have enough funds to book an investment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>peer__Loan_Application_Status_Check</fullName>
        <active>false</active>
        <errorConditionFormula>ISNEW() &amp;&amp; NOT(ISPICKVAL(peer__Loan_Application__r.peer__Stage__c,&apos;In Funding&apos;))</errorConditionFormula>
        <errorMessage>Loan application stage is invalid. Booking can be created only in &apos;In Funding&apos; stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>peer__Requested_Amount_check</fullName>
        <active>false</active>
        <errorConditionFormula>ISNEW() &amp;&amp;( peer__Loan_Application__r.peer__Requested_Loan_Amount__c -  (peer__Loan_Application__r.peer__Amount_Funded__c +  peer__Loan_Application__r.peer__Amount_In_Funding__c )) &lt;  peer__Investment_Amount__c</errorConditionFormula>
        <errorMessage>Investment amount can not be greater than requested Loan amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>peer__Service_Rate_Check</fullName>
        <active>true</active>
        <errorConditionFormula>peer__Service_Rate__c &gt; 100</errorConditionFormula>
        <errorMessage>Service rate cannot be greater than 100%.</errorMessage>
    </validationRules>
</CustomObject>